# bigO

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
bigO/: __main__.py  abtest.py  analysis.py  analyze.py  bigO.py  check.py  custom_alloc.cpp  graph.py  models.py  outliers.py  output.py  report.py
test/: bigO_data.json  exercise_timespace.py  facts.py  facts_bounds.py  run_tests.sh  suffix_array.py  test_ab.py  test_ab_sort.py  test_bounds.py  test_bounds_linear_function.py  test_check_insertion_sort.py  test_infer_selection_sort.py  test_limit_insertion_sort.py  test_limits.py  test_limits_insertion_sort.py
