[project]
name = "bigO"
version = "0.0.3"
description = "Track asymptotic complexity in time and space."
readme = "README.md"
keywords = ["performance", "profiler"]
authors = [
    {name = "Emery Berger", email = "emery.berger@gmail.com"},
    {name = "Stephen Freund", email = "sfreund@williams.edu"}
]
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
"numpy",
"scipy",
"matplotlib",
"statsmodels",
"scikit-learn",
"seaborn",
"termcolor",
"click"
]

[project.urls]
"Homepage" = "https://github.com/plasma-umass/bigO"
"Repository" = "https://github.com/plasma-umass/bigO"

[project.scripts]
bigO = "bigO.__main__:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
